<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"> My Notes </string>
    <string name="telegram_nick" translatable="false">"@"pasichDev</string>
    <string name="email_address" translatable="false">pasichDev@gmail.com</string>

    <string name="interpunct" translatable="false">·</string>
    <string name="NewNote"> Create note </string>
    <string name="title_activity_settings"> Settings </string>
    <string name="settings"> Settings </string>
    <string name="trashNotes">Move to trash</string>
    <string name="trashN"> Trash </string>
    <string name="trashClean">Trash Clean</string>
    <string name="share">Share</string>
    <string name="yesCleanTrash">Yes, clear</string>
    <string name="cancel">Cancel</string>
    <string name="shareNull">Nothing to share!</string>
    <string name="telegram">Open developer contacts</string>
    <string name="whatUpdate">Whats new?</string>
    <string name="save">Save</string>

    <string name="errorInternetConectSpeech"> No internet connection. Check the internet availability. </string>
    <string name="error_TTS"> Speech service not found </string>
    <string name="error_TTS_Message"> To use voice input, you need to install the Speech Services by Google app. </string>
    <string name="errorPermisions"> Access error </string>
    <string name="errorPermisions_Message"> To be able to use this function, you need to grant permission to record audio.
    To do this, open the About app -> Permissions menu and allow using the microphone </string>

    <string name="holdOnSpeec"> Hold and talk </string>
    <string name="notes"> Notes </string>
    <string name="noSave"> Close without saving </string>
    <string name="infoAppPrefences"> About App </string>
    <string name="ratingApp"> Rate this app </string>
    <string name="emptySpeec"> Can\'t hear you please try again </string>
    <string name="exitWhat">To exit, you need to repeat the action</string>

    <string name="notFoundPlayMarket">Missing Play Market app</string>


    <string name="updateNowM">
- Added: Note attachments, in this window you can see links, phone numbers, emails that are used in notes \n
- Added: New switch for sorting notes. \n
- Added: new function for formatting notes by model List>Table \n
- Added: Bottom panel \n
- Fixed bugs in the shopping cart.\n
- Fixed: an error in the title of notes, the process of switching to a new logic for choosing names has also been launched. \n
- A lot of optimization has been carried out, and work with the code for the stability of the application.
    </string>


    <string name="notSupportedShare">This content is not supported.</string>
    <string name="error">Error</string>
    <string name="notSource">This note has no attachments.</string>
    <string name="copyX">Copied</string>
    <string name="cd_format">Format notes</string>

    <string name="search" translatable="false">Поиск в заметках </string>

    <string name="close" translatable="false">Закрыть</string>
    <string name="addTag" translatable="false">Добавить метку</string>
    <string name="createTag" translatable="false">Создать метку</string>
    <string name="deleteTag" translatable="false">Удалить метку</string>
    <string name="deleteTagAndNotes" translatable="false">Удалить метку и отмеченные заметки</string>

    <string name="countTagsError" translatable="false">Нельзя создать больше %1$s меток</string>

    <string name="allNotes" translatable="false">Все заметки </string>
    <string name="more" translatable="false">Больше</string>
    <string name="noteTitle" translatable="false">Название</string>
    <string name="deleteSelectTag" translatable="false">Удаление метки</string>
    <string name="deleteSelectTagTextMassage" translatable="false">Вы действительно хотите удалить метку? После удаления метка пропадет у всех отмеченных заметках.</string>
    <string name="cleanTrashMessage" translatable="false">Вы действительно хотите очистить корзину? Все заметки будут навсегда удаленны.</string>

    <string name="tag" translatable="false">Метка</string>
    <string name="selectAll" translatable="false">Выбрать эту, и еще несколько заметок</string>
    <string name="selectTagForNote" translatable="false">Добавить метку</string>
    <string name="editSelectTagForNote" translatable="false">Изменить метку</string>

    <string name="createNewTag" translatable="false">Введите название метки</string>

    <string name="emptyListMain" translatable="false">Здесь будуть ваши заметки.</string>
    <string name="emptyListTrash" translatable="false">Корзина пустая</string>

    <string name="sort_Date_Increase" translatable="false">Дате изменения: сначала новые</string>
    <string name="sort_Date_Decrease" translatable="false">Дате изменения: сначала старые</string>
    <string name="sort_Title_Increase" translatable="false">Названии: от А-Я</string>
    <string name="sort_Title_Decrease" translatable="false">Названии: от Я-А</string>

    <string name="sortHead" translatable="false">Cортировать по:</string>
    <string name="visibilityNotesToTag" translatable="false">Скрыть метку</string>


    <string name="layoutStringInfo" translatable="false">%1$s | %2$s символов</string>
    <string name="layoutStringInfoCountSymbols" translatable="false">%1$s символов</string>


    <string name="layoutStringInfoTags" translatable="false">Отмечено %1$s заметок</string>


    <string name="settingsTitleContacts" translatable="false">Обратная связь</string>

    <string name="shareApp" translatable="false">Поделиться приложением</string>
    <string name="privacyApp" translatable="false">Политика Конфиденциальности</string>

    <string name="shareAppText" translatable="false"> Рекомендую "Мои Заметки" /n
    https://play.google.com/store/apps/details?id=com.pasich.mynotes</string>


    <string name="addShortCutLauncher" translatable="false">Добавить ярлык на рабочий стол</string>
    <string name="addShortCutSuccessfully" translatable="false">Добавления ярлыка выполнено успешно</string>

    <string name="translateNote" translatable="false">Перевести заметку</string>

    <string name="sourceNotes" translatable="false">Вложения</string>


    <string name="hintTextNote" translatable="false">Текст</string>

    <string name="notInstaledAppTranslate" translatable="false">Для использования этой функции нужно установить Google Translator</string>
    <string name="infoDialogSource" translatable="false">Чтобы скопировать текст вложения нажмите и удерживайте</string>

    <string name="changeSettingsLayout" translatable="false">Настроить отображение</string>
    <string name="lastDateEditNote" translatable="false">Последнее изменение: %1$s </string>
    <string name="restore" translatable="false">Восстановить заметки</string>
    <string name="showActionPanel" translatable="false">Спятать/Показать ActionPanel</string>

    <string name="help" translatable="false">Помощь</string>
    <string name="trashDeleteNotes" translatable="false">Удаленные заметки (Корзина)</string>
    <string name="restoreOldBackups" translatable="false">Восстановить заметки</string>


    <string name="writeMe" translatable="false">Мои контакты</string>
    <string name="noteSaved" translatable="false">Заметку сохранено</string>


    <string name="restoreBackup" translatable="false">Восстановить заметки</string>
    <string name="restoreBackupMessages" translatable="false">В этом окне вы можете восстановить заметки из старых резервных копий.
        Эта функция будет поддерживаться ещё несколько обновлений, потом она будет удалена,
        а на замену придет синхронизация з Google.
    </string>
    <string name="restoreBackupMessageTwo" translatable="false">  Новые заметки будут добавленные до уже существующих, а дубликаты будут проигнорированые!</string>
    <string name="selectedArchive" translatable="false">Выбрать рез. копию</string>
    <string name="loadingProgress" translatable="false">Ожидайте, идет обработка данных</string>

    <string name="errorEmptyNotesRestore" translatable="false">Ошибка: Данный архив либо поврежден, или не содержит заметок</string>
    <string name="successfullyRestoreNotes" translatable="false">Успешно: Заметок восстановленно: %1$d </string>

    <string name="searchNotesFromTitle" translatable="false">Введите заголовок заметки</string>

    <string name="errorNewTagInput" translatable="false">Ошибка: Максимальное количество символов которое может содержать название метки  %1$d </string>

    <string name="emptyTrash" translatable="false">Здесь отображаються удаленные вами заметки</string>
    <string name="emptyNotes" translatable="false">Здесь будут отображаться созданные вами заметки</string>

    <string name="Hello_next" translatable="false">Продолжить</string>
    <string name="Hello_text_Title" translatable="false">Вас приветствует новая версия My Notes</string>
    <string name="v2_0_10" translatable="false">v2.0.10</string>
    <string name="Hello_text_info" translatable="false">Мы отнимем у вас несколько минут, чтобы настроить приложение, а также расскажем что сделали нового для вас.</string>

    <string name="skip" translatable="false">SKIP</string>
    <string name="Finish_text_Title" translatable="false">Завершение настройки</string>
    <string name="Finish_text_button_save_backup" translatable="false">Сохранить рез. копию</string>
    <string name="finish" translatable="false">Завершить</string>
    <string name="Finish_text_Info" translatable="false">Чтобы завершить настройку приложения нужно сохранить рез. копию ваших заметок. Мы это делаем на случай того, если при запуске новой версии произойдет сбой.</string>


    <string name="feature_desing_title" translatable="false">Новый дизайн</string>
    <string name="feature_desing_info" translatable="false">Новый дизайн вмещает в себя удобность и простоту. Каждое взаимодействие между пользователем и приложением продуманно до мелочей.</string>

    <string name="feature_tags_title" translatable="false">Метки, Поиск</string>
    <string name="feature_tags_info" translatable="false">Вместо папок реализовано метки. Теперь можно на каждую заметку повесить метку, чтобы в нужное время ничего не потерять.
        А панель поиска всегда поможет быстро, найти нужную заметку по слову или названию.</string>


    <string name="feature_create_title" translatable="false">Приложение пересоздано с нуля</string>
    <string name="feature_create_info" translatable="false">Последнее обновление выпущено 5 месяцев назад, но все эти 5 месяцев я занимался разработкой новой версии которая написана с нуля. Я учел все ошибки которые допустил в старых версиях, и теперь могу твердить что приложение работает стабильно.
    </string>


    <string name="feature_newFetures_title" translatable="false">Новые функции </string>
    <string name="feature_newFetures_info" translatable="false">Приложение получило много полезных функций, как перевод заметок, множественный выбор, ярлык заметки на рабочий стол, и многое другое. Со временем количество новых функций будет расти. (Виджет, синхронизации с Google)</string>

    <string name="chooseNote" translatable="false">Действия над выбраной заметкой</string>
    <string name="contentDescrChangeStyleText" translatable="false">Изменить стиль текста</string>

    <string name="tagHastag" translatable="false">#%1$s</string>
</resources>