<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.helloUI.fragments.HelloFragment">

        <ImageView
            android:layout_width="wrap_content"
            style="@style/imageViewHello"
            android:src="@drawable/hello_update_fragment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hello_text_Title"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/railway_medium"
            android:gravity="center"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/v2_0_10"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryBackground"
            android:fontFamily="@font/railway_medium"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hello_text_info"
            android:textColor="@color/helloColorInfo"
            android:gravity="center"
            android:layout_margin="20dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/nextFeatures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:textColor="@color/white"
            android:layout_gravity="bottom|center"
            android:padding="15dp"
            android:text="@string/Hello_next" />
</LinearLayout>

