<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/actionPanel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_action_panel"
    android:orientation="horizontal"
    android:padding="4dp"
    android:visibility="gone">


    <ImageButton
        android:id="@+id/action_panel_share"
        style="@style/iconDialogList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/action_panel_delete"
        style="@style/iconDialogList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/deleteSelectTag"
        android:src="@drawable/ic_delete_note"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/closeActionPanel"
        style="@style/iconDialogList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close_search_view"
        app:tint="@color/white" />
</LinearLayout>