<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_head_dialog" />

    <LinearLayout
        android:id="@+id/DataSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/DataSortText"
            style="@style/marginDialogItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_vertical"
            android:text="@string/sort_Date_Increase"
            android:textSize="@dimen/textSizeDialog" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/DataReserve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/DataReserveText"
            style="@style/marginDialogItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/sort_Date_Decrease"
            android:textSize="@dimen/textSizeDialog" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/TitleSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/TitleSortText"
            style="@style/marginDialogItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_vertical"
            android:text="@string/sort_Title_Increase"
            android:textSize="@dimen/textSizeDialog" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/TitleReserve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/TitleReserveText"
            style="@style/marginDialogItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_vertical"
            android:text="@string/sort_Title_Decrease"
            android:textSize="@dimen/textSizeDialog" />
    </LinearLayout>
</LinearLayout>