<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <include android:id="@+id/title"
            layout="@layout/view_head_dialog" />


        <TextView
            android:id="@+id/textMessageDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="10dp"
            android:padding="@dimen/paddingItems"
            android:layout_marginBottom="10dp"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:text="@string/cleanTrashMessage"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="?attr/colorSurfaceVariant"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/yesCleanTrash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="?attr/colorPrimary"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/yesCleanTrash" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
