<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="step"
            type="Integer" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/titleView"
            layout="@layout/view_head_dialog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{step == 1 ? View.VISIBLE : View.GONE , default =visible}"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restoreBackupMessages"
                android:textSize="@dimen/textSizeDialog"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:id="@+id/textTwoMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restoreBackupMessageTwo"
                android:textSize="@dimen/textSizeDialog"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/openArchive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/selectedArchive"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimaryBackground" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{step == 2 ? View.VISIBLE : View.GONE , default =visible}"
            android:orientation="vertical">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loadingProgress"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp" />
        </LinearLayout>


    </LinearLayout>
</layout>